ecs/alb.tf
# Application load balancer to take pulbic requests
resource "aws_alb" "ecs-load-balancer" {
    name                = "ecs-load-balancer"
    security_groups     = ["${aws_security_group.test_public_sg.id}"]
    subnets             = "${aws_subnet.public_subnet.*.id}"
    tags = {
      Name = "ecs-load-balancer"
    }
}

# Create target group for ALB
resource "aws_alb_target_group" "ecs-target-group" {
    name                = "ecs-target-group"
    port                = "80"
    protocol            = "HTTP"
    vpc_id              = "${aws_vpc.ECS-VPC.id}"
    health_check {
        healthy_threshold   = "5"
        unhealthy_threshold = "2"
        interval            = "30"
        matcher             = "200"
        path                = "/"
        port                = "traffic-port"
        protocol            = "HTTP"
        timeout             = "5"
    }
    tags = {
      Name = "ecs-target-group"
    }
}

# Create listener for ALB which listen on port 80
resource "aws_alb_listener" "alb-listener" {
    load_balancer_arn = "${aws_alb.ecs-load-balancer.arn}"
    port              = "80"
    protocol          = "HTTP"
    default_action {
        target_group_arn = "${aws_alb_target_group.ecs-target-group.arn}"
        type             = "forward"
    }
}

# Create launch configuration for ASG (Auto Scaling Groups)
resource "aws_launch_configuration" "ecs-launch-configuration" {
    name                        = "ecs-launch-configuration"
    image_id                    = "${data.aws_ami.latest_ecs.id}"
    instance_type               = "${var.instance_type}"
    iam_instance_profile        = "${aws_iam_instance_profile.ecs-instance-profile.id}"
    root_block_device {
      volume_type = "standard"
      volume_size = 30
      delete_on_termination = true
    }
    lifecycle {
      create_before_destroy = true
    }
    security_groups             = ["${aws_security_group.ecs-instance_sg.id}"]
    associate_public_ip_address = "true"
    key_name                    = "${var.key_name}"
    user_data                   = <<EOF
                                  #!/bin/bash
                                  echo ECS_CLUSTER=${var.ecs_cluster} >> /etc/ecs/ecs.config
                                  EOF
}

# Create ASG with desired instance size, mention private subnet id for launching app instances in private subnets
resource "aws_autoscaling_group" "ecs-autoscaling-group" {
    name                        = "ecs-autoscaling-group"
    max_size                    = "${var.asg_max_size}"
    min_size                    = "${var.asg_min_size}"
    desired_capacity            = "${var.asg_desired_size}"
    vpc_zone_identifier         = "${aws_subnet.private_subnet.*.id}"
    launch_configuration        = "${aws_launch_configuration.ecs-launch-configuration.name}"
    health_check_type           = "ELB"
}
